# tradebot-V1.0

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  vercel.json
backtesting/: data_loader.py  engine.py  metrics.py  monte_carlo.py  reports.py
deploy/: DEPLOYMENT.md  PYTHONANYWHERE.md  pythonanywhere_runner.py  tradebot.service
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: order-form.tsx  pnl-chart.tsx  settings-panel.tsx  websocket-status.tsx
scripts/: download_historical.py  run_backtest.py  validate_api_key.py
src/: main.py
src/ai/: ai_client.py  regime_gatekeeper.py  risk_sentinel.py  strategy_governor.py
src/config/: constants.py  settings.py
src/exchange/: binance_client.py  order_executor.py
src/indicators/: atr.py  ema.py  rsi.py
src/monitoring/: alerts.py  logger.py
src/paid_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/paid_trading_bot/ai_advisory/: base.py  contracts.py  gemini_layer.py  governor.py  orchestrator.py  regime_classifier.py  sentinel.py
src/paid_trading_bot/api/: main.py
src/risk/: emergency_stop.py  risk_engine.py
src/state/: position_manager.py  trade_state.py
src/strategy/: ema_trend.py  entries.py  exits.py
src/utils/: helpers.py  timeframes.py
tests/: conftest.py
tests/unit/: test_circuit_breaker.py  test_position_sizer.py  test_risk_validators.py  test_strategy_entry.py  test_strategy_exit.py
(+46 files in other folders)
