[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paid-trading-bot"
version = "0.1.0"
description = "Rule-based crypto trading bot with AI-assisted advisory layer"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "ccxt>=4.2",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "cryptography>=42.0",
  "python-dotenv>=1.0",
  "orjson>=3.9"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23"
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
